bug white space

--- a/styles/Showcase.module.css
+++ b/styles/Showcase.module.css
@@ -19,7 +19,6 @@
 .hi {
     display: inline-block;
     margin-left: .25vw;
-    background: transparent !important;
 }
 
 .words {
